--- a/HTML/Fan page.html
+++ b/HTML/Fan page.html
@@ -2,20 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dunder Mifflin – The Office Fan Page</title>
+    <title>Dunder Mifflin – The Office Fan Page </title>
     <link rel="stylesheet" href="../css/styles2.css">
 </head>
 <body>
     <!-- White box around everything -->
     <div class="page-wrapper">
-        <!-- Header with nav -->
         <header id="top">
             <div class="banner">
-                <h1>Dunder Mifflin – The Office Fan Page</h1>
+                <h1>Dunder Mifflin – The Office Fan Page (Scratch Page)</h1>
                 <nav class="main-nav">
                     <a href="#scranton-strangler">Scranton Strangler Theories</a>
                     <a href="#pranks">Jim’s Pranks</a>
-                    <a href="#video">Iconic Clip</a>
+                    <a href="#video">Favorite Moment</a>
                     <a href="#tableau">Tableau Dashboard</a>
                     <a href="Game.html">Office Game</a>
                     <a href="../index.html">Home</a>
@@ -23,7 +22,7 @@
             </div>
         </header>
         <main>
-            <!-- SCRANTON STRANGLER SECTION -->
+            <!-- SCcranton Strangler -->
             <section id="scranton-strangler" class="section">
                 <h2>Scranton Strangler Fan Theories</h2>
                 <div class="image-wrapper">
@@ -56,9 +55,9 @@
                     </li>
                 </ol>
             </section>
-            <!-- JIM'S ICONIC PRANKS -->
+            <!-- Pranks -->
             <section id="pranks" class="section">
-                <h2>My favorite pranks Jim has played on Dwight</h2>
+                <h2>Favorite pranks Jim has played on Dwight</h2>
                 <p>
                     One of the most classic reoccuring moments on The office is Jim Halpert's legendary pranks on Dwight.
                     It is hard to choose my favorite here is a list of some of the best!
@@ -67,7 +66,6 @@
                     <img src="../assets/img/jim-impersonates-dwight.avif" height="200" alt="Jim dresses up like Dwight">
                     <p class="image-caption">“Identity theft is not a joke, Jim!”</p>
                 </div>
-                <!-- Simple list (no more boxes) -->
                 <ol class="pranks-list">
                     <li>
                         <strong>Identity theft:</strong>
@@ -90,12 +88,15 @@
                     </li>
                 </ol>
             </section>
-            <!-- YOUTUBE VIDEO SECTION -->
+            <!-- Youtube video -->
             <section id="video" class="section">
-                <h2>Classic The Office Moment</h2>
+                <h2>Favorite Office Scene</h2>
                 <p>
-                    Not all pranks are on Dwight. Sometimes The Office coworkers pull pranks on each other.
-                    Here is an iconic clip where the whole crew pranks their coworker Stanley:
+                    It is no secret that The Office is a hilarious shows with tons of iconic moments, but some moments stand out over others.
+                    One of my favorite scenes is from season 4, episode 9 "Dinner Party". As the name suggests, in this episode, Micheal Scott invites some of his coworkers over to his house
+                    for a dinner party. One of my very favorite moments in the whole show is Michael showing off his brand new TV to Jim and Pam. 
+                    <br>
+                    <br>Here is the clip. Enjoy!
                 </p>
 
                 <div class="video-wrapper">
@@ -109,17 +110,13 @@
                         allowfullscreen>
                     </iframe>
                 </div>
-                <div>
-                   <iframe width="560" height="315" src="https://www.youtube.com/embed/9sqHmCSmx4M?si=574O_-stWF_Iq5O6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
-            <!-- TABLEAU SECTION -->
+            <!-- Tableu -->
             <section id="tableau" class="section">
                 <h2>The Office Tableau Dashboard</h2>
                 <p>
                     This is an awesome Tableau dashboard that someone made of Dwight's computer!
                     Hint: The password is Perfektenschlag.
                 </p>
-                <!-- Tableau embed INSIDE the section -->
                 <div class="tableauPlaceholder" id="vizDwight" style="position: relative; margin: 0 auto;">
                     <noscript>
                         <a href="#">
@@ -145,9 +142,8 @@
                 <script type="text/javascript">
                     var divElement = document.getElementById('vizDwight');
                     var vizElement = divElement.getElementsByTagName('object')[0];
-                    // Make it fit the white middle section
                     vizElement.style.width = '100%';
-                    vizElement.style.height = '650px'; // adjust if you want it taller/shorter
+                    vizElement.style.height = '650px'; 
                     var scriptElement = document.createElement('script');
                     scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
                     vizElement.parentNode.insertBefore(scriptElement, vizElement);
@@ -158,6 +154,6 @@
             <p>&copy; 2025 Dunder Mifflin Scranton Fan Page (unofficial). All rights reserved.</p>
             <p><a href="#top">Back to Top</a></p>
         </footer>
-    </div> <!-- end .page-wrapper -->
+    </div>
 </body>
 </html>
