--- a/HTML/Game.html
+++ b/HTML/Game.html
@@ -256,17 +256,17 @@
   <script>
     // Map tile values to character images
     const characterImageMap = {
-      2:    { src: "../assets/img/kevin.jpg",   alt: "Kevin" },
-      4:    { src: "../assets/img/angela.jpg",  alt: "Angela" },
-      8:    { src: "../assets/img/oscar.jpg",   alt: "Oscar" },
-      16:   { src: "../assets/img/stanley.jpg", alt: "Stanley" },
-      32:   { src: "../assets/img/phyllis.jpg", alt: "Phyllis" },
-      64:   { src: "../assets/img/dwight.jpg",  alt: "Dwight" },
-      128:  { src: "../assets/img/jim.jpg",     alt: "Jim" },
-      256:  { src: "../assets/img/pam.jpg",     alt: "Pam" },
-      512:  { src: "../assets/img/andy.jpg",    alt: "Andy" },
-      1024: { src: "../assets/img/michael.jpg", alt: "Michael" },
-      2048: { src: "../assets/img/creed.jpg",   alt: "Creed" }
+      2:    { src: "../assets/img/Kevin.jpg",   alt: "Kevin" },
+      4:    { src: "../assets/img/Angela.jpg",  alt: "Angela" },
+      8:    { src: "../assets/img/Oscar.jpg",   alt: "Oscar" },
+      16:   { src: "../assets/img/Stanley.jpg", alt: "Stanley" },
+      32:   { src: "../assets/img/Phyllis.jpg", alt: "Phyllis" },
+      64:   { src: "../assets/img/Dwight.jpg",  alt: "Dwight" },
+      128:  { src: "../assets/img/Jim.jpg",     alt: "Jim" },
+      256:  { src: "../assets/img/Pam.jpg",     alt: "Pam" },
+      512:  { src: "../assets/img/Andy.jpg",    alt: "Andy" },
+      1024: { src: "../assets/img/Michael.jpg", alt: "Michael" },
+      2048: { src: "../assets/img/Creed.jpg",   alt: "Creed" }
     };
 
     const boardSize = 4;
@@ -587,3 +587,4 @@
   </script>
 </body>
 </html>
+
